ingress-all.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: web
  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: "app-cert"
    networking.gke.io/v1beta1.FrontendConfig: "app-security-config"
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  ingressClassName: gce
  defaultBackend:
    service:
      name: flask-service
      port:
        number: 8080
